--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -10,6 +10,8 @@
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-instagram-embed": "^2.0.0",
+    "react-instagram-media": "^1.3.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.4",
