--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.1.3",
     "hamburger-react": "^2.4.0",
     "jquery": "^3.5.1",
@@ -13,12 +14,14 @@
     "react-instagram-embed": "^2.0.0",
     "react-instagram-media": "^1.3.2",
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
+    "react-twitter-embed": "^3.0.3",
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.7",
     "ajv": "^6.9.1",
     "cross-env": "^5.2.0",
     "eslint": "^6.8.0",
