--- a/.gitignore
+++ b/.gitignore
@@ -230,5 +230,17 @@ _Pvt_Extensions
 
 # FAKE - F# Make
 .fake/
+
+
+# misc
+.DS_Store
 .env
 .env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
